Archive2/af/96ed244245f656/output
main.cpp:15:23: error: wrong number of template arguments (2, should be 3)
 > class Bar<int, Foo<E>>;
                       ^
main.cpp:5:9: error: provided for 'template<class T, template<class E> class Foo, class E> class Bar'
 > class Bar;
         ^
